--- a/ref4-discuss.bib
+++ b/ref4-discuss.bib
@@ -1,3 +1,17 @@
+@article{UPR, 
+author = {Krummel, Matthew and Blish, Catherine and Kuhns, Michael and Cadwell, Ken and Oberst, Andrew and Goldrath, Ananda and Ansel, K. Mark and Chi, Hongbo and O’Connell, Ryan and Wherry, E. John and Pepper, Marion and Consortium, The Future Immunology and Brodsky, Igor and Chang, John and Arron, Joseph R. and Haining, Nick and Bhattacharya, Deepta and Anderson, Mark and Rothlin, Carla V. and Schwab, Susan and Belkaid, Yasmine and Molofsky, Ari and Savage, Pete and Mucida, Daniel and Iwasaki, Akiko and Victora, Gabriel and Ansel, K. Mark and Hamerman, Jessica and Masopust, David and Barton, Greg and Kaech, Susan and Woodruff, Prescott and Stetson, Daniel B. and Scharschmidt, Tiffany C. and Kedl, Ross and Zúñiga, Elina Isabel and Hoffmann, Alexander and Williams, Matt and Mayer-Barber, Katrin D. and Shin, Sunny and Bensinger, Steven and Lu, Li-Fan and Looney, Mark and Round, June L. and Amigorena, Sebastian and Yewdell, Jonathan and Sun, Joseph and Harty, John T.}, 
+title = {{Universal Principled Review: A Community-Driven Method to Improve Peer Review}}, 
+issn = {0092-8674}, 
+doi = {10.1016/j.cell.2019.11.029}, 
+pmid = {31835023}, 
+abstract = {{Despite being a staple of our science, the process of pre-publication peer review has few agreed-upon standards defining its goals or ideal execution. As a community of reviewers and authors, we assembled an evaluation format and associated specific standards for the process as we think it should be practiced. We propose that we apply, debate, and ultimately extend these to improve the transparency of our criticism and the speed with which quality data and ideas become public.}}, 
+pages = {1441--1445}, 
+number = {7}, 
+volume = {179}, 
+journal = {Cell}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Krummel-Universal%20Principled%20Review-%20A%20Community-Driven%20Method%20to%20Improve%20Peer%20Review-2019-Cell.pdf}, 
+year = {2019}
+}
 @article{DecoupJ, 
 author = {Priem, Jason and Hemminger, Bradley M.}, 
 title = {{Decoupling the scholarly journal}}, 
@@ -35,6 +49,21 @@ journal = {Learned Publishing},
 keywords = {reward,incentivization}, 
 local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Warne-Rewarding%20reviewers%20–%20sense%20or%20sensibility-%20A%20Wiley%20study%20explained-2016-Learned%20Publishing.pdf}, 
 year = {2016}, 
+rating = {4}
+}
+@article{RossHellauer-OPR, 
+author = {Ross-Hellauer, Tony and Görögh, Edit}, 
+title = {{Guidelines for open peer review implementation}}, 
+doi = {10.1186/s41073-019-0063-9}, 
+pmid = {30858990}, 
+abstract = {{Open peer review (OPR) is moving into the mainstream, but it is often poorly understood and surveys of researcher attitudes show important barriers to implementation. As more journals move to implement and experiment with the myriad of innovations covered by this term, there is a clear need for best practice guidelines to guide implementation. This brief article aims to address this knowledge gap, reporting work based on an interactive stakeholder workshop to create best-practice guidelines for editors and journals who wish to transition to OPR. Although the advice is aimed mainly at editors and publishers of scientific journals, since this is the area in which OPR is at its most mature, many of the principles may also be applicable for the implementation of OPR in other areas (e.g., books, conference submissions).}}, 
+pages = {4}, 
+number = {1}, 
+volume = {4}, 
+journal = {Research Integrity and Peer Review}, 
+keywords = {open peer-review,OPR,peer-review}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Ross-Hellauer-Guidelines%20for%20open%20peer%20review%20implementation-2019-Research%20Integrity%20and%20Peer%20Review.pdf}, 
+year = {2019}, 
 rating = {4}
 }
 @article{Wang-DAO, 
