--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -70,9 +70,7 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on E
 
 \subsection{Design}
 
-\subsubsection{Incentivization and recognition.} A popular incentive model for open source software (OSS) is represented by Bounties. Bounties are prizes or monetary rewards given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[2]{\emph{Gitcoin}.\textsc{URL:} https://gitcoin.co.} and \emph{The Bounties Network}\footnote[3]{\emph{The Bounties Network}.\textsc{URL:}https://bounties.network.}. Incentives can be represented by tokens, units of values registered on blockchain networks.
-\newline In the network of the scientific community reviewers provide a service and those who consume it (authors, journals) should be able to contribute with tokens. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher.
-Thus, the system acts also as a reputation builder.
+\subsubsection{Incentivization and recognition.} A popular incentive model for open source software (OSS) is represented by Bounties. Bounties are prizes or monetary rewards given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[2]{\emph{Gitcoin}.\textsc{URL:} https://gitcoin.co.} and \emph{The Bounties Network}\footnote[3]{\emph{The Bounties Network}.\textsc{URL:}https://bounties.network.}. Incentives can be represented by tokens, units of values registered on the blockchain. In the network of the scientific community reviewers provide a service and those who consume it (authors, journals) should be able to contribute with tokens. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher. Thus, the system acts also as a reputation builder.
 
 \subsubsection{Transparency and re-usability of the records.} The peer-review history, including authors' replies and reviewers' recommendations, should be openly and permanently accessible to the community (in the form of 'open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[4]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare} \footnote[5]{\emph{ResearchSquare}.\textsc{URL:}https://www.researchsquare.com.} and \emph{Peerage of Science} \footnote[6]{\emph{Peerage of Science}.\textsc{URL:} https://www.peerageofscience.org.}, that provide a scientific peer review service, peer-reviews in Ants-Review will be transferable across journals (like in 'cascading' or 'portable peer-reviews').
 
@@ -101,8 +99,8 @@ Thus, the system acts also as a reputation builder.
 
 \newline The Ants-Review Protocol is divided into different modules responsible for the following functionalities, as shown in the flow-chart (see Figure \ref{fig:contracts}):
 \emph{AntsReview}, which manages access management and the core system (see Figure \ref{fig:contracts}, (\textbf{a, b, f, h}));
-\emph{Privacy}, which maintains the anonymity of the system via AZTEC Protocol (see Figure  \ref{fig:contracts}, (\textbf{d}));
-\emph{Tokenomics}, which manages the incentive mechanism of the system (see Figure \ref{fig:contracts}, (\textbf{c, e, h})). \newline Agents in the platform are: the issuers, the peer-reviewers, the approver, the contributors (Anters, members of the Ants-Review Community).
+\emph{Privacy}, which maintains the anonymity of the system via AZTEC Protocol (see Figure  \ref{fig:contracts}, (\textbf{e}));
+\emph{Tokenomics}, which manages the incentive mechanism of the system (see Figure \ref{fig:contracts}, (\textbf{c, d, e, h})). \newline Agents in the platform are: the issuers, the peer-reviewers, the approver, the contributors (Anters, members of the Ants-Review Community).
 
 \subsubsection{AntsReview.}
 AntsReview (see Figure \ref{fig:contracts} (\textbf{a}) is the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, a contract-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine, deployed on Ethereum Kovan Testnet\footnote[8]{\emph{AntsReview}.\textsc{URL:}\newline https://kovan.etherscan.io/address/0x85be8F04482cBB920550d5469E4dEdD6e1788121.}. AntsReview implements a bounty-like system (based on the \emph{StandardBounties} contract\footnote[9]{\emph{StandardBounties.sol}.\textsc{URL:}https://github.com/Bounties-Network/StandardBounties/blob/master/contracts/StandardBounties.sol.}) where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
