--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -91,7 +91,7 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on E
 \textbf{c} Native token used in the protocol. It is linked to (\textbf{a}), (\textbf{e}) and to (\textbf{d}).
 \textbf{d} Faucet to distribute \emph{ANTS} on Kovan Testnet for testing purposes. 
 \textbf{e} Integration with Aztec Protocol to wrap (\textbf{c}) into \emph{zkANTS} to implement private \emph{ANTS} transactions on Ethereum.
-\textbf{f} Integration with IPFS to upload papers, requirements and peer-reviews and store the hash as \emph{PoE} into AntsReview.
+\textbf{f} Integration with IPFS to upload papers, requirements and peer-reviews and store the hash as \emph{PoE} into AntsReview (\textbf{a}).
 \textbf{g} Integration with ERC20 tokens like \emph{Dai}, and De-Fi services like MakerDAO DSR to be used in the protocol.
 \textbf{h} Library used by the protocol for secure contract development with the modules listed.}}
 \label{fig:contracts}
@@ -103,18 +103,18 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on E
 \emph{Tokenomics}, which manages the incentive mechanism of the system (see Figure \ref{fig:contracts}, (\textbf{c, d, e, h})). \newline Agents in the platform are: the issuers, the peer-reviewers, the approver, the contributors (Anters, members of the Ants-Review Community).
 
 \subsubsection{AntsReview.}
-AntsReview (see Figure \ref{fig:contracts} (\textbf{a}) is the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, a contract-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine, deployed on Ethereum Kovan Testnet\footnote[8]{\emph{AntsReview}.\textsc{URL:}\newline https://kovan.etherscan.io/address/0x85be8F04482cBB920550d5469E4dEdD6e1788121.}. AntsReview implements a bounty-like system (based on the \emph{StandardBounties} contract\footnote[9]{\emph{StandardBounties.sol}.\textsc{URL:}https://github.com/Bounties-Network/StandardBounties/blob/master/contracts/StandardBounties.sol.}) where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
+AntsReview (see Figure \ref{fig:contracts} (\textbf{a})) is the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, a contract-oriented programming language for writing smart contracts that run on the Ethereum Virtual Machine, deployed on Ethereum Kovan Testnet\footnote[8]{\emph{AntsReview}.\textsc{URL:}\newline https://kovan.etherscan.io/address/0x85be8F04482cBB920550d5469E4dEdD6e1788121.}. AntsReview implements a bounty-like system (based on the \emph{StandardBounties} contract\footnote[9]{\emph{StandardBounties.sol}.\textsc{URL:}https://github.com/Bounties-Network/StandardBounties/blob/master/contracts/StandardBounties.sol.}) where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
 \newline In order to create a transparent and openly accessible AntReview, Alice has to complete a series of required tasks:
  \begin{itemize}
-     \item \emph{upload of the files} containing the requirements of the peer-review and the paper to be reviewed into IPFS, whose hash is stored into the Ethereum blockchain as PoE;
+     \item \emph{upload of the files} containing the requirements of the peer review and the paper to be reviewed into IPFS, whose hash is stored into the Ethereum blockchain as PoE;
      \item \emph{specification of a deadline} in the form of a UNIX timestamp after which the fulfillment will no longer be accepted;
-     \item \emph{specification of the Issuers and an Approver} to respectively modify the AntReview and approve the peer-reviews sent by the peer-reviewers;
+     \item \emph{specification of the Issuers and an Approver} to respectively modify the AntReview and approve the peer reviews sent by the peer-reviewers;
 \end{itemize}
  Alice or the issuers can at any time update the AntReview details (issuers, paper, requirements, deadline) with the function \emph{changeAntReview()} and add/remove the approver with the functions \emph{addApprover()} and \emph{removeApprover()}.
  Anters (contributors) can contribute to Alice's AntReview with the function \emph{contribute()}, by specifying the amount of ANTS they are willing to send. 
- \newline Bob (peer-reviewer) can download the files relative to Alice's paper and its requirements by leveraging on the content-addressing feature of IPFS that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer-review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by uploading the peer-review on IPFS, whose hash is stored into Ethereum blockchain as PoE. He can update the peer-review with the function \emph{updateReview()} by uploading the new version on IPFS. 
- \newline Ted (approver) can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the amount of ANTS that will be transferred as reward from the contract to Bob.
-If Alice's AntReview does not receive any peer-review and the deadline expires, Anters can get a refund with the function \emph{refund()} for their contributions. In order to avoid residual balance, Alice can withdraw ANTS from the AntReview's balance, if the deadline expires, with the function \emph{withdrawAntReview()}, and the contract will transfer the amount specified to Alice and update the balance.
+ \newline Bob (peer-reviewer) can download the files relative to Alice's paper and the requirements of the peer review by leveraging on the content-addressing feature of IPFS that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by uploading the peer review on IPFS, whose hash is stored into Ethereum blockchain as PoE. He can update the peer review with the function \emph{updateReview()} by uploading the new version on IPFS. 
+ \newline Ted (approver) can accept the peer review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the amount of ANTS that will be transferred as reward from the contract to Bob.
+If Alice's AntReview does not receive any peer review and the deadline expires, Anters can get a refund with the function \emph{refund()} for their contributions. In order to avoid residual balance, Alice can withdraw ANTS from the AntReview's balance, if the deadline expires, with the function \emph{withdrawAntReview()}, and the contract will transfer the amount specified to Alice and update the balance.
 
 Access management of the Ants-Review protocol is defined and controlled by the \emph{AntsReviewRoles} (see Figure \ref{fig:contracts} (\textbf{b})), implemented by leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library\footnote[10]{\emph{OpenZeppelin Library}.\textsc{URL:}https://openzeppelin.com.} that is used to define the Issuer and Peer-Reviewer Roles. AntsReviewRoles also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is granted to the owner of the smart contracts, to pause (or unpause) all the functions in case of a security emergency, such as an attack to the smart contracts.
 
