--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -100,10 +100,10 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on E
 \newline The Ants-Review Protocol is divided into different modules responsible for the following functionalities, as shown in the flow-chart (see Figure \ref{fig:contracts}):
 \emph{AntsReview}, which manages access management and the core system (see Figure \ref{fig:contracts}, (\textbf{a, b, f, h}));
 \emph{Privacy}, which maintains the anonymity of the system via AZTEC Protocol (see Figure  \ref{fig:contracts}, (\textbf{e}));
-\emph{Tokenomics}, which manages the incentive mechanism of the system (see Figure \ref{fig:contracts}, (\textbf{c, d, e, h})). \newline Agents in the platform are: the issuers, the peer-reviewers, the approver, the contributors (Anters, members of the Ants-Review Community).
+\emph{Tokenomics}, which manages the incentive mechanism of the system (see Figure \ref{fig:contracts}, (\textbf{c, d, e, h})). \newline Agents in the platform are: issuers, peer-reviewers, approvers and contributors (Anters, members of the Ants-Review Community).
 
 \subsubsection{AntsReview.}
-AntsReview (see Figure \ref{fig:contracts} (\textbf{a})) is the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, a contract-oriented programming language for writing smart contracts that run on the Ethereum Virtual Machine, deployed on Ethereum Kovan Testnet\footnote[8]{\emph{AntsReview}.\textsc{URL:}\newline https://kovan.etherscan.io/address/0x85be8F04482cBB920550d5469E4dEdD6e1788121.}. AntsReview implements a bounty-like system (based on the \emph{StandardBounties} contract\footnote[9]{\emph{StandardBounties.sol}.\textsc{URL:}https://github.com/Bounties-Network/StandardBounties/blob/master/contracts/StandardBounties.sol.}) where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
+AntsReview (see Figure \ref{fig:contracts} (\textbf{a})), the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, a contract-oriented programming language for writing smart contracts that run on the Ethereum Virtual Machine, is deployed on Ethereum Kovan Testnet\footnote[8]{\emph{AntsReview}.\textsc{URL:}\newline https://kovan.etherscan.io/address/0x85be8F04482cBB920550d5469E4dEdD6e1788121.}. AntsReview implements a bounty-like system (based on the \emph{StandardBounties} contract\footnote[9]{\emph{StandardBounties.sol}.\textsc{URL:}https://github.com/Bounties-Network/StandardBounties/blob/master/contracts/StandardBounties.sol.}) where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
 \newline In order to create a transparent and openly accessible AntReview, Alice has to complete a series of required tasks:
  \begin{itemize}
      \item \emph{upload of the files} containing the requirements of the peer review and the paper to be reviewed into IPFS, whose hash is stored into the Ethereum blockchain as PoE;
